fixed notifications and navbar buttons on mobile

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -19,6 +19,10 @@
 .mobileLink {
   text-decoration: none;
   color: inherit;
+  width: 9rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .link {
   width: 100%;
